--- Saturday 2012-06-30 ---
* Made the new debug function produce more data, like caller info and line nr
* We've got non-fluid objects back, but there are certain artefacts popping up
  here and there. And the head gets cut off sometimes:
  need to add sector padding!
* Artefacts have been fixed! The getSector function always supplied the coord
  back it was given, but that could have been from INSIDE the sector, so it was
  wrong. Now we have a function that'll give you a sector coord based on the
  sector number alone.
* In order to draw objects over 2 sectors we had to choose for a padding system
  (adding a bit of clear space around sectors) or drawing the object twice.
  After some tests, padding was the best option.
* Also fixed some setSectorFamily problems. Certain layers used to be drawn more
  than others, and that isn't good.
* Fixed smooth walking of objects, but it causes a massive performance hit

--- Friday 2012-06-29 ---
* Modified the drawGrid debug function, the sector lines are now drawn
  correctly and move along with the map.
* Because of the improved drawGrid function, some other hardcoded debug
  code may be removed.
* Plain shadows are drawn again.
* New debug log function, some fixes here and there

--- Thursday 2012-06-28 ---
* Sectors are now correctly drawn when moving, resulting in smooth motion.
* Started moving the drawAnimation function over to the new design

--- Wednesday 2012-06-27 ---
* Added inner sector coordinates to the coordinate functions
* Added new dirtyness functions, seems to be working.
* Added some extra debug functions, added sector dirtyness and cleaned it up a
  bit.
* Started a whole new mess by redesigning drawTile and drawTileSpecific
* Map-animations work again. Tiles that shouldn't be drawn aren't.

--- Tuesday 2012-06-26 ---
* The map is now rendered in the correct place, sectors work perfectly.
* Added some debug functions for displaying sectors in the debug canvas.
* Fixed autotiles.
